to be compliant with sonar rules